# mcsound

./: Cargo.toml  README.md  flake.nix  mcsound-wrapper.sh
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
src/: assets.rs  audio.rs  main.rs
